@@ -53,6 +53,7 @@ Revision 0.3.0, released XX-XX-2021
 - Add RFC5055 providing Server-Based Certificate Validation Protocol (SCVP)
 - Add RFC5276 providing SCVP updates to convey Long-Term Evidence Records
 - Modified RFC4055 to include PKCS#1 v1.5 algorithm identifiers
+- Add RFC7693 providing the BLAKE2 Cryptographic Hash and MAC
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
